--- a/index.html
+++ b/index.html
@@ -87,20 +87,21 @@
 			</div>
 			<div class="col-md-9">
 				<br>
-				<p>I am a third-year PhD candicate in the Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in the Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree from the School of Automation, 2015. 
+				<p>I am a third-year PhD candicate in the Computer Science Department, University of California, Los Angeles. I become a member of  <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I received my Science Master degree in the Department of Computer Science and Technology of Tsinghua University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>. I received my B.S. degree in Electrical Engineering , 2015. 
 				</p>
 
-				<p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a>, and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
-				</p>
+				<!-- <p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a>, and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
+				</p> -->
 
-				<p>I am interested in <strong>multimodal learning</strong> and <strong>commonsense reasoning</strong>, 
-					especially in commonsense knowledge acquisition and reasoning,
-					mathematical reasoning in education scenarios,
-					multimodal learning in vision-and-language applications.
+				<p>My long-term research goal is to build machines that can <strong>reason</strong> like humans.
+				   I am interested in <strong>mathematical reasoning</strong> in education scenarios,
+				   <strong>commonsense reasoning</strong> for knowledge representation and fusion, 
+				   and <strong>multimodal learning</strong> in vision and language applications.
 				</p>	
 
 				<!-- Icons -->
-				<div style="font-size: 20px;">
+				<div style="font-size: 24px;">
+					<br>
 					<!-- icon size: large fa-2x, small, fa-lg -->
 					<a href="mailto:lupantech@gmail.com"><font color="gray"><i class="fas fa-envelope fa-lg"></i></font></a>&emsp;
 					<a target="_blank" href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en"><font color="gray"><i class="ai ai-google-scholar ai-lg"></i></font></a>&emsp;
@@ -119,6 +120,14 @@
 	<div class="container">
 		<h3 id="News" style="">News</h3>
 		<hr><ul>
+			<li>
+				<strong>[03/2022]&nbsp; <font color="red">New!</font></strong> 
+				I am excited to join <b><a href="https://allenai.org/" target="_blank">Allen Institute for AI (AI2)</a></b> as a research intern!
+			</li>
+			<li>
+				<strong>[03/2022]&nbsp; <font color="red">New!</font></strong> 
+				One paper on character animation sampling is submitted to <b>Preprint</b>.
+			</li>
 			<li>
 				<strong>[02/2022]&nbsp; <font color="red">New!</font></strong> 
 				Data and code for NeurIPS 2021 
@@ -169,6 +178,19 @@
 	<div class="container">
 		<h3 id="Publications" style="">Selected Publications</h3><hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+		<!-- Animation -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv22_animation.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">Triangular Character Animation Sampling with Motion, Emotion, and Relation</font></b><br>
+				<a>Yizhou Zhao, Liang Qiu, Wensi Ai, <b>Pan Lu</b>, Song-Chun Zhu</a><br>
+				<b><a href="https://arxiv.org/abs/2203.04930" target="_blank">arXiv:2203.04930&nbsp;</a></b>
+				<a href="https://arxiv.org/pdf/2203.04930.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="bibs/arxiv22_animation.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div><hr>
 
 		<!-- AAAI22 -->
 		<div class="row">
@@ -203,6 +225,20 @@
 				<!-- <a href="" target="_blank"> <small>[Code]&nbsp;</small></a> -->
 				<a href="bibs/aaai22_valuenet.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<!-- <font color="firebrick"><b>Oral Presentation</b></font> -->
+			</div>
+		</div><hr>
+
+		<!-- GenMotion -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv21_genmotion.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">GenMotion: Data-driven Motion Generators for Real-time Animation Synthesis</font></b><br>
+				<a>Yizhou Zhao, Wensi Ai, Liang Qiu, <b>Pan Lu</b>, Feng Shi, Tian Han, Song-Chun Zhu</a><br>
+				<b><a href="https://arxiv.org/abs/2112.06060" target="_blank">arXiv:2112.06060&nbsp;</a></b>
+				<a href="https://arxiv.org/pdf/2112.06060.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="bibs/arxiv21_genmotion.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
@@ -406,10 +442,10 @@
 				<strong>Tsinghua University</strong>, 2015.8 - 2018.7<br>
 				M.Eng. in Computer Science
 			</li>
-			<!-- <li>
+			<li>
 				<strong>Beijing Institute of Technology</strong>, 2011.8 - 2015.7<br>
 				B.S. in Electrical Engineering
-			</li> -->
+			</li>
 		</ul>
 	</div><br>
 
@@ -418,6 +454,11 @@
 	<div class="container">
 		<h3 id="Experience" style="">Experience</h3>
 		<hr><ul>
+			<li>
+				<strong>Research Intern</strong>, <em>Allen Institute for AI (AI2)</em>, 2022.3 - present <br>
+				<!-- Advisors: Dr. <a href="" target="_blank">XXX</a>, 
+							Dr. <a href="" target="_blank">XXX</a> -->
+			</li>
 			<li>
 				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and Autonomy</em>, <em>UCLA</em>, 2019.9 - present<br>
 				Advisor: Prof. <a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>
@@ -513,7 +554,7 @@
 			</ul>
 		<h4 id="Service" style="">Program Committee Member</h3>
 		<ul>
-			<li> <strong>2022</strong>: CVPR, AAAI, ICLR</li>
+			<li> <strong>2022</strong>: NeurIPS, CVPR, AAAI, ICLR</li>
 			<li> <strong>2021</strong>: NeurIPS, ICCV, ICLR, CVPR</li>
 			<li> <strong>2020</strong>: NeurIPS </li>
 			<li> <strong>2019 and before</strong>: AAAI, SIGKDD, ICDM, PAKDD</li>
