--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 				<strong>[02/2022]&nbsp; <font color="red">New!</font></strong> 
 				Data and code for NeurIPS 2021 
 				<b><a href="https://iconqa.github.io/" target="_blank">IconQA</a></b>
-				is released now!
+				are released now!
 			</li>
 			<li>
 				<strong>[12/2021]&nbsp; <font color="red">New!</font></strong> 
