--- a/index.html
+++ b/index.html
@@ -430,6 +430,47 @@
 	</div><br>
 
 
+	<!-- Publications -->
+	<div class="container">
+		<h3 id="Publications" style="">Workshop Publications</h3><hr>
+
+		<!-- ACL21 -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/neuripsws21_gps.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">Theorem-Aware Geometry Problem Solving with Symbolic Reasoning and Theorem Prediction</font></b><br>
+				<a><b>Pan Lu</b><sup>*</sup>, Ran Gong<sup>*</sup>, Shibiao Jiang<sup>*</sup>, Liang Qiu, Siyuan Huang, Xiaodan Liang, Song-Chun Zhu</a><br>
+				<b><a href="https://mathai4ed.github.io/" target="_blank">NeurIPS 2021 Workshop (MATHAI4ED)&nbsp;</a></b>
+				<a href="https://mathai4ed.github.io/papers/papers/paper_8.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://mathai4ed.github.io/papers/papers/paper_8.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://lupantech.github.io/inter-gps/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/InterGPS" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/neuripsws21_gps.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div><hr>
+
+		<!-- NeurIPS21 -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/neuripsws21_iconqa.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">Towards Diagram Understanding and Cognitive Reasoning in Icon Question Answering</font></b><br>
+				<a><b>Pan Lu</b>, Liang Qiu, Jiaqi Chen, Tony Xia, Yizhou Zhao, Wei Zhang, Zhou Yu, Xiaodan Liang, Song-Chun Zhu</a><br>
+				<b><a href="https://mathai4ed.github.io/" target="_blank">NeurIPS 2021 Workshop (MATHAI4ED)&nbsp;</a></b>
+				<a href="https://mathai4ed.github.io/papers/papers/paper_12.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://mathai4ed.github.io/papers/papers/paper_12.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://iconqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
+				<a href="https://github.com/lupantech/IconQA" target="_blank"> <small>[Code]&nbsp;</small></a>
+				<a href="bibs/neuripsws21_iconqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div><hr>
+
+	</div><br>
+
+
 	<!-- Education -->
 	<div class="container">
 		<h3 id="Education" style="">Education</h3>
