--- a/index.html
+++ b/index.html
@@ -121,6 +121,9 @@
 		<h3 id="News" style="">News</h3>
 		<hr><ul>
 			<li>
+				<strong>[07/2022]&nbsp; <font color="red">New!</font></strong> 
+				One paper on socially intelligent agents is accepted to <b>SIGDIAL 2022</b>.
+			</li>
 				<strong>[03/2022]&nbsp; <font color="red">New!</font></strong> 
 				I am excited to join <b><a href="https://allenai.org/" target="_blank">Allen Institute for AI (AI2)</a></b> as a research intern!
 			</li>
@@ -178,6 +181,22 @@
 	<div class="container">
 		<h3 id="Publications" style="">Selected Publications</h3><hr>
 		<!-- <font color="black">(* indicate equal contribution)</font><br><hr> -->
+
+		<!-- Mind -->
+		<div class="row">
+			<div class="col-md-3">
+				<img class="img-fluid img-rounded" src="imgs/arxiv21_mind.png" style="" alt="">
+			</div>
+			<div class="col-md-9">
+				<b><font color="black">Towards Socially Intelligent Agents with Mental State Transition and Human Utility</font></b><br>
+				<a>Liang Qiu, Yizhou Zhao, Yuan Liang, <b>Pan Lu</b>, Weiyan Shi, Zhou Yu, Song-Chun Zhu</a><br>
+				<b><a href="https://2022.sigdial.org/" target="_blank">SIGDIAL 2022&nbsp;</a></b>
+				<a href="https://arxiv.org/abs/2103.07011" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="papers/sigdial22_mind.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="bibs/sigdial22_mind.txt" target="_blank"> <small>[BibTex]</small></a><br>
+			</div>
+		</div><hr>
+
 		<!-- Animation -->
 		<div class="row">
 			<div class="col-md-3">
@@ -290,20 +309,6 @@
 				<a href="papers/acl21_soc.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="bibs/acl21_soc.txt" target="_blank"> <small>[BibTex]</small></a><br>
 				<font color="firebrick"><b>Oral Presentation</b></font>
-			</div>
-		</div><hr>
-
-		<!-- Mind -->
-		<div class="row">
-			<div class="col-md-3">
-				<img class="img-fluid img-rounded" src="imgs/arxiv21_mind.png" style="" alt="">
-			</div>
-			<div class="col-md-9">
-				<b><font color="black">Towards Socially Intelligent Agents with Mental State Transition and Human Utility</font></b><br>
-				<a>Liang Qiu, Yizhou Zhao, Yuan Liang, <b>Pan Lu</b>, Weiyan Shi, Zhou Yu, Song-Chun Zhu</a><br>
-				<b><a href="https://arxiv.org/abs/2103.07011" target="_blank">arXiv:2103.07011&nbsp;</a></b>
-				<a href="https://arxiv.org/pdf/2103.07011.pdf" target="_blank"> <small>[Paper]&nbsp;</small></a>
-				<a href="bibs/arxiv21_mind.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div><hr>
 
