--- a/index.html
+++ b/index.html
@@ -121,6 +121,10 @@
 		<h3 id="News" style="">News</h3>
 		<hr><ul>
 			<li>
+				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
+				Our proposal for the second MathAI workshop is accepted to <b>NeurIPS 2022</b></font></b>. 
+			</li>
+			<li>
 				<strong>[07/2022]&nbsp; <font color="red">New!</font></strong> 
 				One paper on socially intelligent agents is accepted to <b>SIGDIAL 2022</b>.
 			</li>
@@ -591,11 +595,18 @@
 		<h3 id="Service" style="">Professional Service</h3><hr>
 		<h4 id="Service" style="">Organizer</h3>
 			<ul>
-				<li> <strong>NeurIPS 2021 Workshop</strong>: 
-					<a href="https://mathai4ed.github.io/" target="_blank">Math AI for Education (MATHAI4ED): Bridging the Gap Between Research and Smart Education</a> 
+				<li> 
+					<strong>Primary organizer</strong>, NeurIPS 2022 Workshop on 
+					<a href="https://mathai2022.github.io/" target="_blank">MATH-AI: Toward Human-Level Mathematical Reasoning</a>, 
+					New Orleans, 2022.12
+				</li>
+				<li> 
+					<strong>Primary organizer</strong>, NeurIPS 2021 Workshop on 
+					<a href="https://mathai4ed.github.io/" target="_blank">Math AI for Education (MATHAI4ED): Bridging the Gap Between Research and Smart Education</a>, 
+					Virtual, 2021.12
 				</li>
 				<li> <strong>Chair</strong>,
-					IEEE Student Branch at Tsinghua University, 2015.10 - 2016.10
+					IEEE Student Branch at Tsinghua University, Beijing, 2015.10 - 2016.10
 				</li>
 			</ul>
 		<h4 id="Service" style="">Program Committee Member</h3>
