--- a/index.html
+++ b/index.html
@@ -122,8 +122,12 @@
 		<hr><ul>
 			<li>
 				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
-				Our proposal for the second MathAI workshop is accepted to <b>NeurIPS 2022</b></font></b>. 
+				I am co-organizing the second <b><a href="https://mathai2022.github.io/" target="_blank">MATH-AI</a></b> Workshop at <b>NeurIPS 2022</b>. Welcome to participate!
 			</li>
+<!-- 			<li>
+				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
+				Our proposal for the second MathAI workshop is accepted to <b>NeurIPS 2022</b></font></b>. 
+			</li> -->
 			<li>
 				<strong>[07/2022]&nbsp; <font color="red">New!</font></strong> 
 				One paper on socially intelligent agents is accepted to <b>SIGDIAL 2022</b>.
@@ -158,11 +162,11 @@
 				Our workshop proposal for Math AI for Education (MATHAI4ED) is accepted to <b>NeurIPS 2021</b></font></b>. 
 			</li>
 			<li>
-				<strong>[05/2021]&nbsp; <font color="red">New!</font> </strong> 
+				<strong>[05/2021]&nbsp; </strong> 
 				One paper on interpretable geometry problem solving is accepted to <b>ACL 2021</b> as an <b><font color="red">Oral Presentation</font></b>.
 			</li>
 			<li>
-				<strong>[05/2021]&nbsp; <font color="red">New!</font>
+				<strong>[05/2021]&nbsp; </font>
 				</strong> One paper on social relation inference in dialogues is accepted to <b>ACL 2021</b> as an <b><font color="red">Oral Presentation</font></b>.
 			</li>
 			<li>
