--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 		<hr><ul>
 			<li>
 				<strong>[07/2022]&nbsp; <font color="red">New!</font></strong> 
-				I am co-organizing the second <b><a href="https://mathai2022.github.io/" target="_blank">MATH-AI</a></b> Workshop at <b>NeurIPS 2022</b>. Welcome to participate!
+				I am co-organizing the second <b><a href="https://mathai2022.github.io/" target="_blank">MATH-AI</a></b> Workshop at <b>NeurIPS 2022</b>. See you in New Orleans!
 			</li>
 <!-- 			<li>
 				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
