--- a/index.html
+++ b/index.html
@@ -67,10 +67,16 @@
 				</li>
 				<!-- <li class="nav-item">
 					<a class="nav-link" href="#Honors">Honors</a>
+				</li> -->
+				<li class="nav-item">
+					<a class="nav-link" href="#Teaching">Teaching</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#Service">Service</a>
-				</li> -->
+				</li>
+				<li class="nav-item">
+					<a class="nav-link" href="#Tweets">Tweets</a>
+				</li>
 				<li class="nav-item">
 					<a class="nav-link" href="#Contact">Contact</a>
 				</li>
@@ -106,15 +112,22 @@
 					<a href="mailto:lupantech@gmail.com"><font color="gray"><i class="fas fa-envelope fa-lg"></i></font></a>&emsp;
 					<a target="_blank" href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en"><font color="gray"><i class="ai ai-google-scholar ai-lg"></i></font></a>&emsp;
 					<a target="_blank" href="https://github.com/lupantech"><font color="gray"><i class="fab fa-github fa-lg"></i></font></a>&emsp;
-					<a target="_blank" href="https://twitter.com/lupantech"><font color="gray"><i class="fab fa-twitter fa-lg"></i></font></a>&emsp;
 					<a target="_blank" href="https://www.linkedin.com/in/pan-lu-9308909a/"><font color="gray"><i class="fab fa-linkedin fa-lg"></i></font></a>&emsp;
 					<!-- <a target="_blank" href="https://www.facebook.com/xxx"><font color="black"><i class="fab fa-facebook-square fa-lg"></i></font></a>&nbsp;&nbsp;&nbsp;&nbsp; -->
 					<!-- <a target="_blank" href="files/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
+					<a target="_blank" href="https://twitter.com/lupantech"><font color="gray"><i class="fab fa-twitter fa-lg"></i></font></a>&emsp;
+					<a href="https://twitter.com/lupantech?ref_src=twsrc%5Etfw" 
+					class="twitter-follow-button" 
+					data-show-count="false"
+					>Follow @lupantech</a>
+					<script 
+					async src="https://platform.twitter.com/widgets.js" 
+					charset="utf-8"></script>
+					
 				</div>
 			</div>
 		</div>
 	</div><br><br>
-
 
     <!-- News -->
 	<div class="container">
@@ -510,8 +523,8 @@
 		<hr><ul>
 			<li>
 				<strong>Research Intern</strong>, <em>Allen Institute for AI (AI2)</em>, 2022.3 - present <br>
-				<!-- Advisors: Dr. <a href="" target="_blank">XXX</a>, 
-							Dr. <a href="" target="_blank">XXX</a> -->
+				Advisors: Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>, 
+						  Dr. <a href="https://allenai.org/team/peterc" target="_blank">Peter Clark</a>
 			</li>
 			<li>
 				<strong>Graduate Student Researcher</strong>, <em>Center for Vision, Cognition, Learning, and Autonomy</em>, <em>UCLA</em>, 2019.9 - present<br>
@@ -574,26 +587,6 @@
 	</div><br>
 
 
-	<!-- Awards -->
-	<div class="container">
-		<h3 id="Honors" style="">Selected Honors</h3>
-		<hr><ul>
-			<li><strong>NeurIPS Travel Award</strong>, 2019</li>
-			<li><strong>ICCV Travel Award</strong>, 2019</li>
-			<li><strong>Outstanding Master Thesis Award</strong>, Tsinghua University, 2018</li>
-			<li><strong>SIGKDD Travel Award</strong>, 2018</li>
-			<li><strong>"Stars of Tomorrow" Excellent Intern Award</strong>, Microsoft Research, 2018</li>
-			<li><strong>AAAI Travel Award</strong>, 2018, 2020</li>
-			<li><strong>GuangHua Scholarship Award</strong>, Tsinghua University, 2016</li>
-			<li><strong>Outstanding Undergraduate, Beijing</strong>, 2015</li>
-			<li><strong>Champion of National College Student Innovation Conference</strong>, 2014</li>
-			<li><strong>National Scholarship</strong> (<em>for top 2% students</em>), 2014</li>
-			<li><strong>First Prize of America Mathematical Contest In Modeling (MCM)</strong>, 2014</li>
-			<li><strong>President Teli Xu’s Special Fellowship</strong> (<em>the highest honor for top 2 undergraduates</em>), 2013</li>
-		</ul>
-	</div><br>
-
-
 	<!-- Service -->
 	<div class="container">
 		<h3 id="Service" style="">Professional Service</h3><hr>
@@ -629,6 +622,36 @@
 		</ul>
 	</div><br>
 
+	<!-- Awards -->
+	<div class="container">
+		<h3 id="Honors" style="">Selected Honors</h3>
+		<hr><ul>
+			<li><strong>NeurIPS Travel Award</strong>, 2019</li>
+			<li><strong>ICCV Travel Award</strong>, 2019</li>
+			<li><strong>Outstanding Master Thesis Award</strong>, Tsinghua University, 2018</li>
+			<li><strong>SIGKDD Travel Award</strong>, 2018</li>
+			<li><strong>"Stars of Tomorrow" Excellent Intern Award</strong>, Microsoft Research, 2018</li>
+			<li><strong>AAAI Travel Award</strong>, 2018, 2020</li>
+			<li><strong>GuangHua Scholarship Award</strong>, Tsinghua University, 2016</li>
+			<li><strong>Outstanding Undergraduate, Beijing</strong>, 2015</li>
+			<li><strong>Champion of National College Student Innovation Conference</strong>, 2014</li>
+			<li><strong>National Scholarship</strong> (<em>for top 2% students</em>), 2014</li>
+			<li><strong>First Prize of America Mathematical Contest In Modeling (MCM)</strong>, 2014</li>
+			<li><strong>President Teli Xu’s Special Fellowship</strong> (<em>the highest honor for top 2 undergraduates</em>), 2013</li>
+		</ul>
+	</div><br>
+
+	<!-- Tweets -->
+	<div class="container">
+		<h3 id="Tweets" style="">Tweets</h3>
+		<hr><ul>
+			<div class="container" style="text-align: center;">
+				<!-- https://publish.twitter.com/?buttonType=FollowButton&query=%40lupantech&widget=Timeline -->
+				<a class="twitter-timeline" data-width="50%" data-height="500" data-theme="light" href="https://twitter.com/lupantech?ref_src=twsrc%5Etfw">Tweets by lupantech</a> 
+				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+			</div>
+		</ul>
+	</div><br>
 
 	<!-- Contact -->
 	<div class="container">
