--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 	<div class="container">
 		<h3 id="Tweets" style="">Tweets</h3>
 		<hr><ul>
-			<div class="container" style="text-align: center;">
+			<div class="container" style="text-align: left;">
 				<!-- https://publish.twitter.com/?buttonType=FollowButton&query=%40lupantech&widget=Timeline -->
 				<a class="twitter-timeline" data-width="50%" data-height="500" data-theme="light" href="https://twitter.com/lupantech?ref_src=twsrc%5Etfw">Tweets by lupantech</a> 
 				<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
