--- a/index.html
+++ b/index.html
@@ -608,6 +608,7 @@
 			</ul>
 		<h4 id="Service" style="">Program Committee Member</h3>
 		<ul>
+			<li> <strong>2023</strong>: AAAI</li>
 			<li> <strong>2022</strong>: COLING, NeurIPS, CVPR, AAAI, ICLR</li>
 			<li> <strong>2021</strong>: NeurIPS, ICCV, ICLR, CVPR</li>
 			<li> <strong>2020</strong>: NeurIPS </li>
