--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 			</div>
 			<div class="col-md-9">
 				<b><font color="black">Towards Socially Intelligent Agents with Mental State Transition and Human Utility</font></b><br>
-				<a>Liang Qiu, Yizhou Zhao, Yuan Liang, <b>Pan Lu</b>, Weiyan Shi, Zhou Yu, Song-Chun Zhu</a><br>
+				<a>Liang Qiu<sup>*</sup>, Yizhou Zhao<sup>*</sup>, Yuan Liang, <b>Pan Lu</b>, Weiyan Shi, Zhou Yu, Song-Chun Zhu</a><br>
 				<b><a href="https://2022.sigdial.org/" target="_blank">SIGDIAL 2022&nbsp;</a></b>
 				<a href="https://arxiv.org/abs/2103.07011" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/sigdial22_mind.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
