data visualization page

--- a/index.html
+++ b/index.html
@@ -159,10 +159,6 @@
 				I am co-organizing the second <b><a href="https://mathai2022.github.io/" target="_blank">MATH-AI</a></b>
 				Workshop at <b>NeurIPS 2022</b>. See you in New Orleans!
 			</li>
-			<!-- 			<li>
-				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong> 
-				Our proposal for the second MathAI workshop is accepted to <b>NeurIPS 2022</b></font></b>. 
-			</li> -->
 			<li>
 				<strong>[07/2022]&nbsp; <font color="red">New!</font></strong>
 				One paper on socially intelligent agents is accepted to <b>SIGDIAL 2022</b>.
@@ -191,12 +187,12 @@
 						target="_blank">IconQA</a></b>) is accepted to <b>NeurIPS 2021</b></font></b>.
 			</li>
 			<li>
-				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong>
+				<strong>[07/2021]&nbsp;</strong>
 				I am co-organizing the <b><a href="https://mathai4ed.github.io/" target="_blank">MATHAI4ED</a></b>
 				Workshop at <b>NeurIPS 2021</b>. Welcome to participate!
 			</li>
 			<li>
-				<strong>[07/2021]&nbsp; <font color="red">New!</font></strong>
+				<strong>[07/2021]&nbsp; </strong>
 				Our workshop proposal for Math AI for Education (MATHAI4ED) is accepted to <b>NeurIPS 2021</b></font>
 				</b>.
 			</li>
@@ -256,6 +252,7 @@
 				<b><a href="https://nips.cc/" target="_blank">NeurIPS 2022&nbsp;</a></b>
 				<a href="" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/neurips22_scienceqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
+				<a href="https://scienceqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="bibs/neurips22_scienceqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
 			</div>
 		</div>
