--- a/index.html
+++ b/index.html
@@ -712,6 +712,10 @@
 		<hr>
 		<ul>
 			<li>
+				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2022.9 - 2022.12 <br>
+				CS 249: Data Science Fundamentals, Fall 2022
+			</li>
+			<li>
 				<strong>Guest Lecturer</strong>, <em>UCLA</em>, 2022.2 <br>
 				ECE C247: Neural Networks and Deep Learning, Winter 2022
 			</li>
