--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 				Clark,
 				Ashwin Kalyan<br>
 				<b><a href="https://nips.cc/" target="_blank">NeurIPS 2022&nbsp;</a></b>
-				<a href="" target="_blank"> <small>[Paper]&nbsp;</small></a>
+				<a href="https://arxiv.org/abs/2209.09513" target="_blank"> <small>[Paper]&nbsp;</small></a>
 				<a href="papers/neurips22_scienceqa.pdf" target="_blank"> <small>[PDF]&nbsp;</small></a>
 				<a href="https://scienceqa.github.io/" target="_blank"> <small>[Project]&nbsp;</small></a>
 				<a href="bibs/neurips22_scienceqa.txt" target="_blank"> <small>[BibTex]</small></a><br>
