--- a/index.html
+++ b/index.html
@@ -96,51 +96,70 @@
 			</div>
 			<div class="col-md-9">
 				<br>
-				<p>I am a third-year PhD candidate in the Computer Science Department, University of California, Los
-					Angeles. I become a member of <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for
-						Vision, Cognition, Learning and Autonomy</a>, 2019. My supervisor is Professor <a
-						href="http://www.stat.ucla.edu/~sczhu/" target="_blank"> Song-Chun Zhu</a>. Before that, I
-					received my Science Master degree in the Department of Computer Science and Technology of Tsinghua
-					University, supervised by Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/"
-						target="_blank">Jianyong Wang</a>. I received my B.S. degree in Electrical Engineering, 2015.
+				<p> I am a fourth-year PhD candidate in the Computer Science Department, University of California, Los
+					Angeles.
+
+					I am a member of the <a href="https://vcla.stat.ucla.edu/" target="_blank">Center for Vision,
+						Cognition, Learning and Autonomy</a>, supervised by Professor
+					<a href="http://www.stat.ucla.edu/~sczhu/" target="_blank">Song-Chun Zhu</a>.
+
+					I am closely working with
+					Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>,
+					Professor <a href="https://www.cs.columbia.edu/~zhouyu/" target="_blank">Zhou Yu</a>,
+					Professor <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a>, and
+					Professor <a href="http://www.stat.ucla.edu/~ywu/" target="_blank">Ying-Nian Wu</a> at UCLA.
+
+					Before that, I received my Master's degree in Computer Science at Tsinghua University, supervised by
+					Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>.
 				</p>
 
-				<!-- <p>I was a research intern with the NLC Group, MSRA from Nov. 2017 to May 2018, working with Dr. <a href="https://www.microsoft.com/en-us/research/people/leiji/" target="_blank">Lei Ji</a>, <a href="https://www.microsoft.com/en-us/research/people/nanduan/" target="_blank">Nan Duan</a>, and <a href="https://www.microsoft.com/en-us/research/people/mingzhou/" target="_blank">Ming Zhou</a>. Before that, I was a visiting student with <a href="http://mmlab.ie.cuhk.edu.hk/index.html" target="_blank">Multimedia Laboratory, CUHK</a> from Aug 2016 to Oct 2017, working with Professor <a href="http://www.ee.cuhk.edu.hk/~hsli/" target="_blank">Hongsheng Li</a> and <a href="http://www.ee.cuhk.edu.hk/~xgwang/" target="_blank">Xiaogang Wang</a>.
-				</p> -->
-
-				<p>My long-term research goal is to build machines that can <strong>reason</strong> like humans.
-					I am interested in <strong>mathematical reasoning</strong> in education scenarios,
-					<strong>commonsense reasoning</strong> for knowledge representation and fusion,
-					and <strong>multimodal learning</strong> in vision and language applications.
+				<p>
+					My long-term research goal is to build machines that can <strong>reason</strong> like humans and
+					<strong>collaborate</strong> with humans. I am interested in NLP and machine reasoning, including
+					the following topics:
+				<ul>
+					<li>
+						<strong>Mathematical reasoning</strong> in educational scenarios (e.g., math, geometry, science)
+					</li>
+					<li>
+						<strong>Trustworthy NLP models</strong> that are explainable and human-in-loop
+					</li>
+					<li>
+						<strong>Conversational agents</strong> that are value-aware and socially intelligent
+					</li>
+					<li>
+						<strong>Multimodal learning</strong> in vision-and-language applications (e.g., VQA, captioning,
+						dialog)
+					</li>
+				</ul>
 				</p>
-
-				<!-- Icons -->
-				<div style="font-size: 24px;">
-					<br>
-					<!-- icon size: large fa-2x, small, fa-lg -->
-					<a href="mailto:lupantech@gmail.com">
-						<font color="gray"><i class="fas fa-envelope fa-lg"></i></font>
-					</a>&emsp;
-					<a target="_blank" href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en">
-						<font color="gray"><i class="ai ai-google-scholar ai-lg"></i></font>
-					</a>&emsp;
-					<a target="_blank" href="https://github.com/lupantech">
-						<font color="gray"><i class="fab fa-github fa-lg"></i></font>
-					</a>&emsp;
-					<a target="_blank" href="https://www.linkedin.com/in/pan-lu-9308909a/">
-						<font color="gray"><i class="fab fa-linkedin fa-lg"></i></font>
-					</a>&emsp;
-					<!-- <a target="_blank" href="https://www.facebook.com/xxx"><font color="black"><i class="fab fa-facebook-square fa-lg"></i></font></a>&nbsp;&nbsp;&nbsp;&nbsp; -->
-					<!-- <a target="_blank" href="files/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
-					<a target="_blank" href="https://twitter.com/lupantech">
-						<font color="gray"><i class="fab fa-twitter fa-lg"></i></font>
-					</a>&emsp;
-					<a href="https://twitter.com/lupantech?ref_src=twsrc%5Etfw" class="twitter-follow-button"
-						data-show-count="false">Follow @lupantech</a>
-					<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
-				</div>
 			</div>
+		</div>
+
+		<!-- Icons -->
+		<div style="font-size: 24px;">
+			<br>
+			<!-- icon size: large fa-2x, small, fa-lg -->
+			<a href="mailto:lupantech@gmail.com">
+				<font color="gray"><i class="fas fa-envelope fa-lg"></i></font>
+			</a>&emsp;
+			<a target="_blank" href="https://scholar.google.com/citations?user=IyucsdQAAAAJ&hl=en">
+				<font color="gray"><i class="ai ai-google-scholar ai-lg"></i></font>
+			</a>&emsp;
+			<a target="_blank" href="https://github.com/lupantech">
+				<font color="gray"><i class="fab fa-github fa-lg"></i></font>
+			</a>&emsp;
+			<a target="_blank" href="https://www.linkedin.com/in/pan-lu-9308909a/">
+				<font color="gray"><i class="fab fa-linkedin fa-lg"></i></font>
+			</a>&emsp;
+			<!-- <a target="_blank" href="https://www.facebook.com/xxx"><font color="black"><i class="fab fa-facebook-square fa-lg"></i></font></a>&nbsp;&nbsp;&nbsp;&nbsp; -->
+			<!-- <a target="_blank" href="files/CV_Pan Lu.pdf"><font color="black"><i class="ai ai-cv ai-lg"></i></font></a> -->
+			<a target="_blank" href="https://twitter.com/lupantech">
+				<font color="gray"><i class="fab fa-twitter fa-lg"></i></font>
+			</a>&emsp;
+			<a href="https://twitter.com/lupantech?ref_src=twsrc%5Etfw" class="twitter-follow-button"
+				data-show-count="false">Follow @lupantech</a>
+			<script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 		</div>
 	</div><br><br>
 
@@ -151,12 +170,11 @@
 		<ul>
 			<li>
 				<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
-				One paper on Chain-of-Thought Reasoning for ScienceQA is accepted to <b>NeurIPS
-					2022</b>!
+				One paper on Chain-of-Thought Reasoning for ScienceQA is accepted to <b>NeurIPS 2022</b>.
 			</li>
 			<li>
 				<strong>[07/2022]&nbsp; <font color="red">New!</font></strong>
-				I am co-organizing the second <b><a href="https://mathai2022.github.io/" target="_blank">MATH-AI</a></b>
+				I am co-organizing the 2nd <b><a href="https://mathai2022.github.io/" target="_blank">MATH-AI</a></b>
 				Workshop at <b>NeurIPS 2022</b>. See you in New Orleans!
 			</li>
 			<li>
@@ -712,29 +730,28 @@
 		<hr>
 		<ul>
 			<li>
-				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2022.9 - 2022.12 <br>
-				CS 249: Data Science Fundamentals, Fall 2022
+				<strong>Teaching Assistant</strong>, <em>CS 249: Data Science Fundamentals</em><br>
+				Graduate, UCLA, Fall 2022
 			</li>
 			<li>
-				<strong>Guest Lecturer</strong>, <em>UCLA</em>, 2022.2 <br>
-				ECE C247: Neural Networks and Deep Learning, Winter 2022
+				<strong>Guest Lecturer</strong>, <em>ECE C247: Neural Networks and Deep Learning</em><br>
+				Graduate, UCLA, Winter 2022
 			</li>
 			<li>
-				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2022.1 - 2022.3 <br>
-				ECE C247: Neural Networks and Deep Learning, Winter 2022
+				<strong>Teaching Assistant</strong>, <em>ECE C247: Neural Networks and Deep Learning</em><br>
+				Graduate, UCLA, Winter 2022
 			</li>
 			<li>
-				<strong>Teaching Assistant</strong>, <em>UCLA</em>, 2021.9 - 2021.12 <br>
-				<a href="https://laforge.cs.ucla.edu/cs111/" target="_blank">CS 111: Operating System Principles</a>,
-				Fall 2021
+				<strong>Teaching Assistant</strong>, <em>CS 111: Operating System Principles</a></em><br>
+				Undergraduate, UCLA, Fall 2021
 			</li>
 			<li>
-				<strong>Guest Lecturer</strong>, <em>Tsinghua University</em>, 2017.9 - 2018.1 <br>
-				Data Mining: Theory and Algorithms
+				<strong>Guest Lecturer</strong>, <em>Data Mining: Theory and Algorithms</em><br>
+				Graduate, Tsinghua University, Fall 2017
 			</li>
 			<li>
-				<strong>Teaching Assistant</strong>, <em>Tsinghua University</em>, 2016.3 - 2016.6 <br>
-				C Programming Language
+				<strong>Teaching Assistant</strong>, <em>C Programming Language</a></em><br>
+				Undergraduate, Tsinghua University, Spring 2016
 			</li>
 		</ul>
 	</div><br>
