--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
 						<strong>Conversational agents</strong> that are value-aware and socially intelligent
 					</li>
 					<li>
-						<strong>Multimodal learning</strong> in vision-and-language applications (e.g., VQA, captioning,
-						dialog)
+						<strong>Multimodal learning</strong> in vision-and-language applications (e.g., VQA, captioning)
 					</li>
 				</ul>
 				</p>
