--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					Dr. <a href="http://ashwinkalyan.com/" target="_blank">Ashwin Kalyan</a>,
 					Professor <a href="https://www.cs.columbia.edu/~zhouyu/" target="_blank">Zhou Yu</a>,
 					Professor <a href="http://web.cs.ucla.edu/~kwchang/" target="_blank">Kai-Wei Chang</a>, and
-					Professor <a href="http://www.stat.ucla.edu/~ywu/" target="_blank">Ying-Nian Wu</a> at UCLA.
+					Professor <a href="http://www.stat.ucla.edu/~ywu/" target="_blank">Ying Nian Wu</a> at UCLA.
 
 					Before that, I received my Master's degree in Computer Science at Tsinghua University, supervised by
 					Professor <a href="http://dbgroup.cs.tsinghua.edu.cn/wangjy/" target="_blank">Jianyong Wang</a>.
