--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
 		<ul>
 			<li>
 				<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
-				One paper on Chain-of-Thought Reasoning for ScienceQA is accepted to <b>NeurIPS 2022</b>.
+				One paper on chain-of-thought reasoning for
+				<a href="https://scienceqa.github.io/" target="_blank">ScienceQA</a>
+				is accepted to <b>NeurIPS 2022</b>.
 			</li>
 			<li>
 				<strong>[07/2022]&nbsp; <font color="red">New!</font></strong>
