--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 			<li>
 				<strong>[09/2022]&nbsp; <font color="red">New!</font></strong>
 				One paper on chain-of-thought reasoning for
-				<a href="https://scienceqa.github.io/" target="_blank">ScienceQA</a>
+				<b><a href="https://scienceqa.github.io/" target="_blank">ScienceQA</a></b>
 				is accepted to <b>NeurIPS 2022</b>.
 			</li>
 			<li>
